Fixed bugs with top clipping and added click handlers to text inside symbol

--- a/css/demo.css
+++ b/css/demo.css
@@ -4,12 +4,10 @@ body {
     font: 300 100.1% "Helvetica Neue", Helvetica, "Arial Unicode MS", Arial, sans-serif;
 }
 #container {
-    height: 740px;
     left: 50%;
     margin: -240px 0 0 -320px;
     position: absolute;
     top: 50%;
-    width: 640px;
 }
 #copy {
     bottom: 0;
